[FIX] point_of_sale: long product name completely visible
Current behavior:
When a product had a too long name, the name was truncated and couldn't
be completely seen.

Steps to reproduce:
- Change the name of a product to a very long name with spaces
- Open the POS
- The product name is truncated

This commit changes the CSS to allow the product name to be completely
visible, as it was in 15.0

opw-3245538

--- a/addons/point_of_sale/static/src/scss/pos.scss
+++ b/addons/point_of_sale/static/src/scss/pos.scss
@@ -1173,6 +1173,7 @@ td {
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    margin-top: 20px;
 }
 
 .pos .product .product-img img {
@@ -1216,11 +1217,18 @@ td {
 .pos .product .product-name {
     box-sizing: border-box;
     line-height: 14px;
-    overflow: hidden;
     margin: map-get($spacers, 2);
-    display: -webkit-box;
+    display: flex;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
+    position: relative;
+    flex-grow: 1;
+}
+
+.pos .product .product-name .product-name-text {
+    flex-grow: 1;
+    position: absolute;
+    bottom: 0;
 }
 
 /*  ********* The BlockUI Component (frontend)  ********* */
